# CS234_Final_Project

./: .gitignore  DT_WARMSTART_RECOMMENDATIONS.md  HANDOFF.md  INSTRUCTIONS.md  NEXT_STEPS.md  PLAN.md  README.md  create_obstacle_track.py  create_oval_track.py  create_tracks.py  plan_obstacle_avoidance_ipopt.md  requirements.txt  run_scp_demo.py  run_trajopt_batch_eval.py  run_trajopt_demo.py  run_trajopt_tuning_grid.py  simulate_vehicle.py  test_dynamic_model.py  test_unified_model.py
.julia_project/: Manifest.toml
data/: DATASET_CONFIG.md  DATASET_CONFIG_FATROP.md  __init__.py  build_all_hotspots.sh  build_base_laps.py  build_dataset.py  build_hotspot_json.py  build_postprojection_repairs.py  build_repair_segments.py  generate_dataset.py  make_shift_episodes.py  run_expand_oval_shifts_30k.sh  run_full_dataset.sh  run_hard_repairs.sh  run_hard_repairs_fatrop.sh  run_oval_hardrepairs_then_train.sh  run_postproj_from_clean_checkpoint.sh  run_postprojection_repairs.sh  run_postprojection_repairs_loop.sh  schema.py  visualize_hotspots.py  visualize_repair_segment.py
docs/: DYNAMIC_MODEL.md  FATROP_CONFIG.md  FATROP_TRAJOPT_PROGRESS.md  IPOPT_TRAJOPT_PROGRESS.md  MADNLP_CONFIG.md  MADNLP_TRAJOPT_PROGRESS.md  MODEL_COMPLIANCE.md  OPTIMIZER_CONFIG.md  PROJECTION_ABLATION_RESULTS.md  ROCKIT_FATROP_PROGRESS.md  ROLLOUT_DIAGNOSIS_RESULTS.md  SCP_EXPLANATION.md  SPEEDUP_OPTIONS.md  TRACKS.md  TRAJOPT_HISTORY.md  scp_correctness.md  (+1 more)
docs/reference_repos/models-main/: pyproject.toml
docs/reference_repos/models-main/models/: vehicle_params.py  world.py
dt/: IMPLEMENTATION.md  (+14 more)
(+11915 files in other folders)
